--- a/tc.css
+++ b/tc.css
@@ -10,15 +10,15 @@ body
 }
 h1
 {
-     margin-top: 40%;
+    
     position: center;
-    font-size: 8em;
+    font-size: 40px;
     color:black;
   
 }
 span
 {
-    display: table-cell;
+   line-height: 80px;
     margin:0;
     padding: 0;
     animation: neon 4.25s linear infinite;
